fix tech images on safari

--- a/source/assets/app/components/skills-section/skills-section.scss
+++ b/source/assets/app/components/skills-section/skills-section.scss
@@ -15,9 +15,13 @@
     border-bottom: 1px solid rgba(104, 194, 236, 0.1);
     margin-bottom: 35px;
 
-    img {
+    div {
       width: 50px;
       margin: 10px 5px;
+    }
+
+    img {
+      width: 100%;
     }
   }
 
